--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 2s linear;
   }
 }
 
@@ -28,11 +28,32 @@
   color: #61dafb;
 }
 
+.letter {
+  animation: text-shadow infinite 10s ease;
+  color: #282c34;
+  font-size: 8em;
+}
+
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  0% {
+    opacity: 0.5;
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.5;
+  }
+}
+
+@keyframes text-shadow {
+  0% {
+    text-shadow: 0px 0px #282c34;
+  }
+  50% {
+    text-shadow: -10px -10px 10px #e9e9e9;
+  }
+  100% {
+    text-shadow: 0px 0px #282c34;
   }
 }
