--- a/src/App.css
+++ b/src/App.css
@@ -7,15 +7,15 @@
   pointer-events: none;
 }
 
-.App-header {
-  background-color: #487ee0;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  /*font-size: calc(10px + 2vmin);*/
-}
+/*.App-header {*/
+/*  background-color: #487ee0;*/
+/*  height: 100vh;*/
+/*  display: flex;*/
+/*  flex-direction: column;*/
+/*  align-items: center;*/
+/*  justify-content: center;*/
+/*  !*font-size: calc(10px + 2vmin);*!*/
+/*}*/
 
 .App-link {
   color: #61dafb;
