added cards component

--- a/src/utils/import.scss
+++ b/src/utils/import.scss
@@ -1,3 +1,5 @@
 //import component styles
 @import "src/styles/nav";
 @import "src/styles/pageHome";
+@import "src/styles/hero";
+@import "src/styles/card";
