--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -11,19 +11,25 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    @media (max-width: $mobile) {
+      padding-top: 5%;
+    }
     &__left {
       width: 50%;
       color: white;
-      h1 {
+      #typewriter1 {
+        color: white;
+        font-size: 2em;
         width: 100%;
-        @media (max-width: $mobile) {
-          padding-left: 1em;
-        }
       }
       h2 {
+        height: 4em;
+        margin-bottom: 2em;
         width: 100%;
         @media (max-width: $mobile) {
           padding-left: 1em;
+          margin-bottom: 3em;
+          height: 6em;
         }
       }
       .caret {
@@ -36,13 +42,19 @@
       @media (max-width: $mobile) {
         width: 100%;
         justify-content: flex-end;
+        overflow: hidden;
+        margin-top: -15em;
       }
       img {
         object-fit: cover;
+        object-position: 30%;
         width: 100%;
         height: 50vh;
+        animation: fade-from-right 1s ease;
         @media (max-width: $mobile) {
-          height: 20em;
+          width: 100%;
+          margin-left: 7em;
+          height: 15em;
         }
       }
     }
@@ -56,5 +68,16 @@
   }
   50% {
     border-color: #fff;
+  }
+}
+
+@keyframes fade-from-right {
+  from {
+    opacity: 0;
+    transform: translateX(5em);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0em);
   }
 }
