test process.env.CI = false

--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -33,6 +33,8 @@
         }
       }
       .caret {
+        margin-left: 0.5rem;
+        font-size: 1.5em;
         animation: blink 1s step-end infinite;
         border-left: 2px solid white;
       }
