created hamburger menu

--- a/src/utils/import.scss
+++ b/src/utils/import.scss
@@ -3,3 +3,6 @@
 @import "src/styles/pageHome";
 @import "src/styles/hero";
 @import "src/styles/card";
+@import "src/styles/burger";
+
+@import "./src/utils/variables";
