--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -38,7 +38,9 @@
       border: 3px solid $blue;
     }
     img {
+      margin: 2em 0;
       width: 100%;
+      height: 10em;
     }
     a {
       text-decoration: none;
