--- a/src/utils/import.scss
+++ b/src/utils/import.scss
@@ -4,5 +4,6 @@
 @import "src/styles/hero";
 @import "src/styles/card";
 @import "src/styles/burger";
+@import "src/styles/footer";
 
 @import "./src/utils/variables";
