--- a/src/utils/variables.scss
+++ b/src/utils/variables.scss
@@ -1,7 +1,11 @@
 $gray: #212121;
 $light-gray: #424242;
 $blue: #6d81e3;
+$offwhite: #d5d5d5;
 //$blue: #212121;
 
 //viewports
 $mobile: 480px;
+
+//fonts
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
