--- a/src/styles/burger.scss
+++ b/src/styles/burger.scss
@@ -3,9 +3,10 @@
 .burgerContainer {
   display: flex;
   flex-direction: row;
+  position: absolute;
+  top: 0;
   justify-content: space-between;
   overflow: hidden;
-  background-color: $blue;
   button {
     z-index: 2;
     width: 6em;
@@ -27,7 +28,12 @@
   h1 {
     font-size: 1.5em;
     padding-left: 1.5rem;
+    padding-top: 0.4rem;
     color: white;
+    font-style: italic;
+    span {
+      font-weight: 300;
+    }
   }
   .nav {
     position: fixed;
