--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -1,10 +1,14 @@
 //@import '../utils/variables.scss';
 
 .heroContainer {
-  height: 50vh;
+  height: 60vh;
   background-color: $blue;
-  background-position: bottom;
   background-repeat: no-repeat;
+  //background-image: url("https://stephankop.nl/wp-content/themes/stk/assets/img/foto.jpg");
+  background-image: url("https://i.imgur.com/bZp6pgw.jpeg");
+  background-position: 70% 50%;
+  background-size: cover;
+  background-blend-mode: overlay;
   &__hero {
     width: 100%;
     max-width: 1080px;
@@ -14,7 +18,7 @@
     flex-wrap: wrap;
     flex-direction: row;
     @media (max-width: $mobile) {
-      padding-top: 5%;
+      padding-top: 15%;
     }
     &__left {
       width: 50%;
@@ -42,22 +46,26 @@
       }
     }
     &__right {
+      margin-top: 10vh;
       width: 50%;
       @media (max-width: $mobile) {
         width: 100%;
         justify-content: flex-end;
         overflow: hidden;
-        margin-top: -15em;
+        margin-top: -10em;
       }
       img {
-        object-fit: cover;
+        object-fit: contain;
         //object-position: 50%;
         width: 100%;
         padding-top: 3em;
-        height: 35em;
+        height: 40vh;
         animation: fade-from-right 1s ease;
         transition: all 0.2s ease;
         cursor: pointer;
+        &:hover {
+          transform: translateY(-1em);
+        }
         @media (max-width: $mobile) {
           padding-top: 0;
           object-position: 30%;
