added multiple pages and made hero component reusable

--- a/src/styles/burger.scss
+++ b/src/styles/burger.scss
@@ -7,6 +7,9 @@
   top: 0;
   justify-content: space-between;
   overflow: hidden;
+  a {
+    text-decoration: none;
+  }
   button {
     z-index: 2;
     width: 6em;
