--- a/src/utils/variables.scss
+++ b/src/utils/variables.scss
@@ -6,6 +6,9 @@ $offwhite: #d5d5d5;
 
 //viewports
 $mobile: 480px;
+$tablet: 680px;
+$desktop: 1080px;
+$ultrawide: 2100px;
 
 //fonts
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
