--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -5,10 +5,10 @@
   background-color: $blue;
   background-repeat: no-repeat;
   //background-image: url("https://stephankop.nl/wp-content/themes/stk/assets/img/foto.jpg");
-  background-image: url("https://i.imgur.com/bZp6pgw.jpeg");
+  //background-image: url("https://i.imgur.com/bZp6pgw.jpeg");
   background-position: 70% 50%;
   background-size: cover;
-  background-blend-mode: overlay;
+  background-blend-mode: soft-light;
   &__hero {
     width: 100%;
     max-width: 1080px;
@@ -46,13 +46,16 @@
       }
     }
     &__right {
-      margin-top: 10vh;
+      margin-top: 5vh;
       width: 50%;
       @media (max-width: $mobile) {
         width: 100%;
         justify-content: flex-end;
         overflow: hidden;
-        margin-top: -10em;
+        margin-top: -15em;
+      }
+      @media (min-width: $ultrawide) {
+        margin-top: 0;
       }
       img {
         object-fit: contain;
@@ -63,9 +66,6 @@
         animation: fade-from-right 1s ease;
         transition: all 0.2s ease;
         cursor: pointer;
-        &:hover {
-          transform: translateY(-1em);
-        }
         @media (max-width: $mobile) {
           padding-top: 0;
           object-position: 30%;
