added product_showcase and explanation component

--- a/src/utils/import.scss
+++ b/src/utils/import.scss
@@ -1,9 +1,10 @@
 //import component styles
 @import "src/styles/nav";
-@import "src/styles/pageHome";
 @import "src/styles/hero";
 @import "src/styles/card";
 @import "src/styles/burger";
 @import "src/styles/footer";
+@import "src/styles/showcase";
+@import "src/styles/explanation";
 
 @import "./src/utils/variables";
