--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -21,6 +21,7 @@
       text-decoration: none;
       color: white;
       transition: all 0.2s ease;
+      padding-bottom: 0.25rem;
       &:hover {
         color: $blue;
       }
