--- a/src/utils/import.scss
+++ b/src/utils/import.scss
@@ -6,5 +6,6 @@
 @import "src/styles/footer";
 @import "src/styles/showcase";
 @import "src/styles/explanation";
+@import "src/styles/titledivider";
 
 @import "./src/utils/variables";
