changed posting form

--- a/src/utils/import.scss
+++ b/src/utils/import.scss
@@ -7,5 +7,6 @@
 @import "src/styles/showcase";
 @import "src/styles/explanation";
 @import "src/styles/titledivider";
+@import "src/styles/contactForm";
 
 @import "./src/utils/variables";
