--- a/src/utils/variables.scss
+++ b/src/utils/variables.scss
@@ -1,6 +1,7 @@
 $gray: #212121;
 $light-gray: #424242;
 $blue: #6d81e3;
+$light-blue: rgba(109, 129, 227, 0.65);
 $offwhite: #d5d5d5;
 //$blue: #212121;
 
