--- a/src/styles/showcase.scss
+++ b/src/styles/showcase.scss
@@ -7,7 +7,7 @@
   //background-image: linear-gradient(45deg, rgba(108, 128, 227, 0.5) 30%, rgba(255, 255, 255, 0.0));
   transition: all 0.2s ease;
   //border-bottom: 20px solid white;
-  margin-bottom: 1rem;
+  //margin-bottom: 1rem;
   @media (max-width: $mobile) {
     background-position: center;
   }
