--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -4,13 +4,13 @@
   height: 60vh;
   background-color: $blue;
   background-repeat: no-repeat;
-  //background-image: url("https://stephankop.nl/wp-content/themes/stk/assets/img/foto.jpg");
-  //background-image: url("https://i.imgur.com/bZp6pgw.jpeg");
   background-position: 70% 50%;
   background-size: cover;
   background-blend-mode: soft-light;
+  animation: backgroundPosition 1s ease forwards;
   @media (max-width: $mobile) {
     height: 28em;
+    animation: none;
   }
   &__hero {
     width: 100%;
@@ -20,8 +20,11 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    @media (max-width: $desktop) {
+      padding: 10% 1.5em 0 1.5em;
+    }
     @media (max-width: $mobile) {
-      padding-top: 15%;
+      padding: 15% 0;
     }
     &__left {
       width: 50%;
@@ -102,3 +105,13 @@
     transform: translateX(0em);
   }
 }
+
+@keyframes backgroundPosition {
+  from {
+    background-size: 125%;
+  }
+  to {
+    background-size: 100%;
+  }
+}
+
