--- a/src/styles/showcase.scss
+++ b/src/styles/showcase.scss
@@ -1,22 +1,19 @@
 .showcaseContainer {
   width: 100%;
-  height: 50vh;
-  background-size: cover;
+  height: 50em;
+  background-size: 100% auto;
   background-repeat: no-repeat;
-  //box-shadow: inset 0 0 300px $blue;
-  //background-image: linear-gradient(45deg, rgba(108, 128, 227, 0.5) 30%, rgba(255, 255, 255, 0.0));
-  transition: all 0.2s ease;
-  //border-bottom: 20px solid white;
-  //margin-bottom: 1rem;
+  transition: all 1s ease;
+  &:hover {
+    background-size: 110% auto;
+    @media (max-width: $mobile) {
+      background-size: auto 110%;
+    }
+  }
   @media (max-width: $mobile) {
     background-position: center;
-  }
-  &:hover {
-    //box-shadow: inset 0 0 100px $blue;
-    //background: linear-gradient(130deg, rgba(108, 128, 227, 0.3) 0%, rgba(255, 255, 255, 0.0)) !important;
-    @media (max-width: $mobile) {
-      box-shadow: none;
-    }
+    height: 50vh;
+    background-size: auto 100%;
   }
   &__text {
     width: 30%;
@@ -36,5 +33,14 @@
         display: none;
       }
     }
+  }
+}
+
+@keyframes fadeMe {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0.8;
   }
 }
