added about page

--- a/src/utils/import.scss
+++ b/src/utils/import.scss
@@ -8,5 +8,6 @@
 @import "src/styles/explanation";
 @import "src/styles/titledivider";
 @import "src/styles/contactForm";
+@import "src/styles/aboutExplanation";
 
 @import "./src/utils/variables";
