--- a/src/styles/contactForm.scss
+++ b/src/styles/contactForm.scss
@@ -100,6 +100,9 @@
           background-color: $blue;
           color: white;
         }
+        &:focus {
+          outline: none;
+        }
       }
     }
   }
