--- a/src/styles/aboutExplanation.scss
+++ b/src/styles/aboutExplanation.scss
@@ -12,10 +12,12 @@
     width: 27em;
     height: 27em;
     border-radius: 30px;
+    box-shadow: 5px 5px 10px -1px rgba(173,173,173,0.5);
     @media (max-width: $mobile) {
-      width: 100%;
-      height: 100%;
-      border-radius: 0;
+      width: 90%;
+      height: 90%;
+      border-radius: 30px;
+      margin: auto;
     }
   }
   &__text {
